# rhiza-agents

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
docs/: ARCHITECTURE.md  langfuse-rubric.md
docs/reference/: database-schema.md  daytona-integration.md  example-prompts.md  existing-code.md  langchain-docs-summary.md  langgraph-patterns.md  mcp-integration.md
docs/specs/: 01-mvp-deep-agent.md  01-mvp-single-agent.md  02-auth.md  02-multi-agent-supervisor.md  03-sandbox-middleware.md  03-user-editable-config.md  04-production-deploy.md  04-sandbox-execution.md  05-agent-server.md  05-vector-store.md  06-streaming.md  07-production-deploy.md  08-context-management.md  09-file-viewer-and-execution-approval.md  10-extended-thinking.md  11-lumino-panel-layout.md  12-user-mcp-servers.md  13-main-py-refactor.md
frontend/: package-lock.json  package.json  tsconfig.json  watch.mjs
frontend/src/: app.ts  style.css  theme.css
frontend/src/lib/: dialog.ts  markdown.ts  sse.ts
frontend/src/widgets/: activity.ts  chat.ts  config.ts  conversations.ts  files.ts  fileviewer.ts
keycloak/: realm.json
src/rhiza_agents/: agent.py  api.py  app.py  auth.py  config.py  credentials.py  deps.py  github_skills.py  logging_config.py  main.py  messages.py  observability.py
src/rhiza_agents/agents/: graph.py  registry.py  supervisor.py
src/rhiza_agents/agents/tools/: files.py  mcp.py  sandbox.py  skills.py  vectordb.py
src/rhiza_agents/db/: database.py  models.py  sqlite.py
src/rhiza_agents/eval/: __init__.py  runner.py
src/rhiza_agents/routes/: agents.py  chat.py  conversations.py  credentials.py  mcp_servers.py  pages.py  settings.py  skills.py  vectorstores.py
src/rhiza_agents/skills/code-review/: SKILL.md
src/rhiza_agents/skills/data-cleaning/: SKILL.md
src/rhiza_agents/static/: chat.js  config.js  style.css
src/rhiza_agents/templates/: chat.html  config_editor.html  login.html
src/rhiza_agents/tools/: mcp.py  sandbox.py
src/rhiza_agents/vectorstore/: manager.py
tests/: test_chat_interrupt_enrich.py  test_cleanup_thread_workspace.py  test_content_disposition.py  test_credentials.py  test_github_skills.py  test_run_file_args.py  test_sandbox_credentials.py  test_sandbox_helpers.py  test_skill_path_validation.py  test_skills_activation.py  test_skills_route_missing_creds.py  test_user_credentials_migration.py
