[project]
name = "rhiza-agents"
version = "0.1.0"
description = "Multi-agent chat platform built on LangChain Deep Agents and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rhiza Research"}
]

dependencies = [
    "deepagents>=0.4.9",
    "langchain-anthropic>=1.3.4",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph",
    "langsmith",
]

[project.optional-dependencies]
sandbox = [
    "daytona-sdk>=0.149.0",
]
server = [
    "langgraph-api",
    "langgraph-runtime-inmem",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhiza_agents"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "pre-commit",
    "langgraph-cli[inmem]>=0.4.15",
]
