[project]
name = "rhiza-agents"
version = "0.1.0"
description = "Multi-agent chat platform with user-editable agent configs, MCP tools, sandboxed execution, and vector store integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rhiza Research"}
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "httpx-sse",
    "authlib",
    "itsdangerous",
    "python-multipart",
    "jinja2",
    # LangGraph + LangChain
    "langchain>=1.2.13",
    "langgraph>=1.0.10",
    "langgraph-supervisor>=0.0.31",
    "langchain-anthropic>=1.3.4",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith",
    # App database
    "databases[aiosqlite]",
    # Structured logging
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
postgres = [
    "databases[asyncpg]",
    "langgraph-checkpoint-postgres>=3.0.4",
]
sandbox = [
    "daytona-sdk>=0.149.0",
]
vectorstore = [
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters",
    "pymupdf",
]

[project.scripts]
rhiza-agents = "rhiza_agents.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhiza_agents"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "pre-commit",
]
